k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ha-cloud-webapp
  namespace: ha-webapp
spec:
  selector:
    app: ha-cloud-webapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
      name: http
  type: ClusterIP
